SHIT IS WORKINGgit add .git add .

--- a/views/index.jade
+++ b/views/index.jade
@@ -8,6 +8,7 @@ head
     script(src='/js/jqueryui.js')
     |     
     script(src='/js/scripts.js')
+    script(src='/js/howler.min.js')
     // Latest compiled and minified CSS
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css')
     // Optional theme
